<resources>
    <string name="app_name">WeatherToday</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name *</string>
    <string name="gender">Gender *</string>
    <string name="dob">DOB *</string>
    <string name="address_line_1">Address Line 1 *</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="pin_code">Pin Code *</string>
    <string name="check">Check</string>
    <string name="district">District :</string>
    <string name="state">State :</string>
    <string name="register">Register</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="show_results">Show Results</string>
    <string name="temperature_in_centigrade">Temperature in Centigrade :</string>
    <string name="temperature_in_fahrenheit">Temperature in Fahrenheit :</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
</resources>